--- a/index.html
+++ b/index.html
@@ -12,6 +12,13 @@
 
 <body>
   <script type="module" src="/main.js"></script>
+  <div class="text-box">
+    <div class="heading"><h2>To infinity and Beyond</h2></div>
+    <div class="button-wrapper">
+      <div class="button">Learn More</div>
+      <div class="button">Contact Us</div>
+    </div>
+  </div>
 </body>
 
 </html>
