Url in the buttons

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
   <div class="text-box">
     <div class="heading"><h2>To infinity and Beyond</h2></div>
     <div class="button-wrapper">
-      <div class="button">Learn More</div>
-      <div class="button">Contact Us</div>
+      <a href="https://echelr73.wixsite.com/website" target="_blank" class="button">Other Projects</a>
+      <a href="https://github.com/echelr73" target="_blank" class="button">GitHub</a>
     </div>
   </div>
 </body>
