CSS button OPC1

--- a/index.html
+++ b/index.html
@@ -13,10 +13,22 @@
 <body>
   <script type="module" src="/main.js"></script>
   <div class="text-box">
-    <div class="heading"><h2>To infinity and Beyond</h2></div>
-    <div class="button-wrapper">
-      <a href="https://echelr73.wixsite.com/website" target="_blank" class="button">Other Projects</a>
-      <a href="https://github.com/echelr73" target="_blank" class="button">GitHub</a>
+    <div class="heading">
+      <span>To infinity and beyond</span>
+    </div>
+     <div class="button-wrapper">
+      <a href="https://echelr73.wixsite.com/website" target="_blank"><button data-text="Awesome" class="button">
+          <span class="actual-text">&nbsp;OtherProjects&nbsp;</span>
+          <span class="hover-text" aria-hidden="true">&nbsp;OtherProjects&nbsp;</span>
+        </button></a>
+      </div>
+      <div class="button-wrapper">
+      <a href="https://github.com/echelr73" target="_blank"><button data-text="Awesome" class="button">
+          <span class="actual-text">&nbsp;GitHub&nbsp;</span>
+          <span class="hover-text" aria-hidden="true">&nbsp;GitHub&nbsp;</span>
+        </button></a>
+      <!-- <a href="https://echelr73.wixsite.com/website" target="_blank" class="button">Other Projects</a> 
+      <a href="https://github.com/echelr73" target="_blank" class="button">GitHub</a>-->
     </div>
   </div>
 </body>
