CSS Button OPC 2

--- a/index.html
+++ b/index.html
@@ -13,10 +13,14 @@
 <body>
   <script type="module" src="/main.js"></script>
   <div class="text-box">
-    <div class="heading"><h2>To infinity and Beyond</h2></div>
+    <div class="heading"><span>To infinity and Beyond</span></div>
     <div class="button-wrapper">
-      <a href="https://echelr73.wixsite.com/website" target="_blank" class="button">Other Projects</a>
-      <a href="https://github.com/echelr73" target="_blank" class="button">GitHub</a>
+      <a href="https://echelr73.wixsite.com/website" target="_blank" class="button">
+        <button id="btn">Other Projects</button>
+      </a>
+      <a href="https://github.com/echelr73" target="_blank" class="button">
+        <button id="btn">GitHub</button>
+      </a>
     </div>
   </div>
 </body>
