--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
     <div class="heading"><span>To infinity and Beyond</span></div>
     <div class="button-wrapper">
       <a href="https://echelr73.wixsite.com/website" target="_blank" class="button">
-        <button id="btn">Other Projects</button>
+        Other Projects
       </a>
       <a href="https://github.com/echelr73" target="_blank" class="button">
-        <button id="btn">GitHub</button>
+        GitHub
       </a>
     </div>
   </div>
